Revise Makefile.am
make wasn't building successfully, presumably due to changes in
automake, so I added src/Makefile.am and revised Makefile.am so that the
source is built.

--- a/configure.ac
+++ b/configure.ac
@@ -88,5 +88,8 @@ if test $rl_lib = yes; then
 	AC_SUBST(READLINE_LIBS)
 fi
 
-AC_CONFIG_FILES([Makefile])
+AC_CONFIG_FILES([
+ Makefile
+ src/Makefile
+])
 AC_OUTPUT
